--- a/codium/profiles/main/data/settings.json
+++ b/codium/profiles/main/data/settings.json
@@ -63,45 +63,135 @@
   "emulator.emulatorPath": "~/Android/Sdk/emulator",
   // spelling
   "cSpell.userWords": [
+    "adgroup",
+    "adslots",
     "ahbode",
+    "animative",
     "authable",
     "Authed",
     "Autocaptured",
+    "Bhrain",
     "cacheable",
+    "catalogization",
+    "catalogize",
+    "CICD",
+    "cleanout",
     "Clientside",
     "Comms",
+    "copywrite",
+    "copywrites",
     "craigslist",
+    "Datestamp",
+    "datetime",
+    "debarriers",
+    "decentive",
+    "decentivizes",
     "declapract",
     "Declastruct",
     "deduped",
+    "deets",
     "Denormalization",
+    "devantage",
+    "devex",
+    "Didnt",
+    "distilisys",
     "Distractionless",
+    "dobj",
+    "dryrun",
     "ehmpathy",
     "emptivly",
+    "endrive",
+    "enschedule",
+    "entable",
+    "eventbridge",
+    "Exid",
+    "Feedbackable",
+    "Fillability",
     "finsert",
     "freddies",
     "gamification",
+    "geolocation",
+    "geoproximity",
+    "Ghlitch",
+    "granularities",
+    "grokability",
     "Grokable",
     "hasha",
+    "Heiroot",
     "hometools",
     "idempotency",
     "idempotently",
+    "Imhance",
+    "incentivizes",
+    "inmem",
+    "inventorization",
+    "isomorphically",
+    "jobgen",
+    "kernelize",
     "lawnfather",
+    "lifecycles",
+    "Lightbox",
+    "Listem",
     "localstorage",
     "mapbox",
+    "mharket",
+    "MHETRICS",
+    "MISINTENDED",
+    "nonpublished",
+    "notmvp",
+    "ocid",
+    "offsize",
+    "openai",
     "Opunym",
+    "Outkey",
     "overlayable",
+    "passin",
+    "Positionals",
+    "preprod",
+    "Pressable",
+    "productionlines",
     "Protools",
+    "Proximities",
     "publically",
+    "queryparams",
+    "Referenceable",
+    "relship",
+    "retargeting",
+    "Rhelay",
+    "salescase",
+    "SALESPAGE",
+    "salesphone",
+    "saturatable",
+    "scrollers",
+    "searchterm",
+    "searchterms",
+    "serde",
+    "SHORTERM",
+    "sideplan",
+    "Signin",
     "SIGNUP",
+    "snailmail",
+    "stdev",
     "steves",
+    "strategize",
+    "summate",
+    "Swiper",
+    "tacticize",
+    "treestruct",
+    "treestructs",
     "Underlight",
+    "unidate",
     "upsert",
     "upserted",
+    "uptil",
     "Usecase",
     "usecases",
     "utilitarianly",
-    "whodis"
+    "visualogic",
+    "whitelabels",
+    "whodis",
+    "winrates",
+    "Winratio"
   ],
   "gitlens.codeLens.enabled": false,
   "gitlens.views.repositories.location": "scm",
@@ -201,12 +291,37 @@
     "plaintext": false,
     "markdown": false
   },
-  "workbench.editor.showTabs": false,
+  "workbench.editor.showTabs": "single",
   "editor.unicodeHighlight.allowedCharacters": {
     "➕": true
   },
   "editor.suggestOnTriggerCharacters": false,
-  "editor.quickSuggestions": {
-    "other": "inline"
-  }
+  "extensions.experimental.affinity": {
+    "vscodevim.vim": 1
+  },
+  "terminal.integrated.gpuAcceleration": "off",
+  "editor.snippets.codeActions.enabled": false,
+  "github.copilot.advanced": {},
+  "vsicons.dontShowNewVersionMessage": true,
+  "terminal.integrated.customGlyphs": false,
+  "security.workspace.trust.untrustedFiles": "open",
+  "github.copilot.editor.enableAutoCompletions": true,
+  "files.associations": {
+    "*.src": "shellscript"
+  },
+  "redhat.telemetry.enabled": false,
+  "[dockercompose]": {
+    "editor.insertSpaces": true,
+    "editor.tabSize": 2,
+    "editor.autoIndent": "advanced",
+    "editor.defaultFormatter": "redhat.vscode-yaml"
+  },
+  "[github-actions-workflow]": {
+    "editor.defaultFormatter": "redhat.vscode-yaml"
+  },
+  "terminal.integrated.enableMultiLinePasteWarning": false,
+  "gitlens.plusFeatures.enabled": false,
+  "gitlens.virtualRepositories.enabled": false,
+  "gitlens.currentLine.pullRequests.enabled": false,
+  "claudeCode.preferredLocation": "panel"
 }
