--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"devDependencies": {
-		"rhachet": "^1.22.5",
-		"rhachet-roles-bhuild": "^0.6.6",
-		"rhachet-roles-ehmpathy": "^1.17.20"
+		"rhachet": "^1.29.1",
+		"rhachet-brains-anthropic": "^0.3.0",
+		"rhachet-roles-bhrain": "^0.7.5",
+		"rhachet-roles-bhuild": "^0.7.0",
+		"rhachet-roles-ehmpathy": "^1.17.40"
 	}
 }
